@@ -6,6 +6,7 @@ import com.sparta.blogproj.dto.PostResponseDto;
 import com.sparta.blogproj.dto.StatusMessageDto;
 import com.sparta.blogproj.entity.Post;
 import com.sparta.blogproj.entity.User;
+import com.sparta.blogproj.entity.UserRoleEnum;
 import com.sparta.blogproj.jwt.JwtUtil;
 import com.sparta.blogproj.repository.PostRepository;
 import com.sparta.blogproj.repository.UserRepository;
@@ -18,22 +19,23 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
 
 
 @Service
 public class PostService {
 
     private final PostRepository postRepository;
-    private final JwtUtil jwtUtil;
     private final UserRepository userRepository;
+    private final JwtUtil jwtUtil;
 
-    public PostService(PostRepository postRepository, JwtUtil jwtUtil, UserRepository userRepository) {
+    public PostService(PostRepository postRepository, UserRepository userRepository, JwtUtil jwtUtil) {
         this.postRepository = postRepository;
-        this.jwtUtil = jwtUtil;
         this.userRepository = userRepository;
+        this.jwtUtil = jwtUtil;
     }
 
-    // 게시글 생성
+    // 게시글 작성
     public PostResponseDto createPost(PostRequestDto requestDto, HttpServletRequest req) {
         User user = findUser(req);
 
@@ -45,10 +47,11 @@ public class PostService {
 
     // 전체 게시글 조회
     public PostListResponseDto getPosts() {
-        List<PostResponseDto> postResponseDtoList = postRepository.findAllByOrderByModifiedAtDesc()
-                .stream().map((PostResponseDto::new)).toList();
+        List<Post> posts = postRepository.findAllByOrderByModifiedAtDesc();
+        List<PostResponseDto> postResponseDtoList = posts.stream()
+                .map(post -> new PostResponseDto(post))
+                .collect(Collectors.toList());
         return new PostListResponseDto(postResponseDtoList);
-
     }
 
     // 특정 게시글 조회
@@ -65,13 +68,17 @@ public class PostService {
         User user = findUser(req);
         Post userPost = postRepository.findById(id).orElseThrow(() ->
                 new NoSuchElementException("게시글이 존재하지 않습니다."));
-        if (user.getId().equals(userPost.getUser().getId())) {
+        if (user.getRole().equals(UserRoleEnum.USER)) {
+            if (user.getId().equals(userPost.getUser().getId())) {
+                userPost.update(requestDto, user);
+                return new PostResponseDto(userPost);
+            } else {
+                throw new IllegalArgumentException("회원님의 게시글이 아닙니다.");
+            }
+        } else {
             userPost.update(requestDto, user);
             return new PostResponseDto(userPost);
-        } else {
-            throw new IllegalArgumentException("회원님의 게시글이 아닙니다.");
         }
-
     }
 
     // 게시글 삭제
@@ -80,23 +87,28 @@ public class PostService {
         User user = findUser(req);
         Post userPost = postRepository.findById(id).orElseThrow(() ->
                 new NoSuchElementException("게시글이 존재하지 않습니다."));
-        if (user.getId().equals(userPost.getUser().getId())) {
+        if (user.getRole().equals(UserRoleEnum.USER)) {
+            if (user.getId().equals(userPost.getUser().getId())) {
+                postRepository.delete(userPost);
+                StatusMessageDto statusMessageDto = new StatusMessageDto("게시글 삭제 성공", HttpStatus.OK.value());
+                return new ResponseEntity<>(statusMessageDto, HttpStatus.OK);
+            } else {
+                throw new IllegalArgumentException("회원님의 게시글이 아닙니다.");
+            }
+        } else {
             postRepository.delete(userPost);
             StatusMessageDto statusMessageDto = new StatusMessageDto("게시글 삭제 성공", HttpStatus.OK.value());
             return new ResponseEntity<>(statusMessageDto, HttpStatus.OK);
-        } else {
-            throw new IllegalArgumentException("회원님의 게시글이 아닙니다.");
         }
-
     }
 
     // 토큰 검사 후 User 반환
-    public User findUser(HttpServletRequest req) {
+    private User findUser(HttpServletRequest req) {
         String token = jwtUtil.getJwtFromHeader(req);
 
         if (jwtUtil.validateToken(token)) {
             Claims claims = jwtUtil.getUserInfoFromToken(token);
-            String username = claims.get("username", String.class);
+            String username = claims.get("sub", String.class);
             return userRepository.findByUsername(username)
                     .orElseThrow(() -> new NoSuchElementException("사용자를 찾을 수 없습니다."));
         } else {
